# libcertifier

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BUGS  BUILD.gn  CHANGES  CMakeLists.txt  README.adoc  Untitled.code-workspace  build_matter_plugin.sh  build_matter_plugin_build.sh  certifier.gni  certifier.ver.in  libcertifier-cert.crt  libcertifier.cfg.sample
certifier-all-clusters-app/: .gn  BUILD.gn  LightingManager.h  args.gni  build_overrides  main.cpp  matter-sdk
cmake/: DoxygenDoc.cmake
daemon/: CMakeLists.txt  InstallScript.cmake  certifierd.init  certifierd.service  daemon.c
docs/: anatomy_of_https_certifier_call.adoc  api_usage.adoc  build.adoc  cli_usage.adoc  configuration.adoc  daemon_usage.adoc  development_quality.adoc  error_codes.adoc  libcertifier.adoc  logging.adoc  matter_plugin_usage.adoc  memory_consumption_by_function.adoc  open_source_dependencies.adoc  portability.adoc  xpki_api_usage.adoc
docs/Doxygen/: Doxyfile.in  README.md  anatomy_of_https_certifier_call.md  api_usage.md  build.md  cli_usage.md  configuration.md  development_quality.md  error_codes.md  layout.xml  libcertifier.md  logging.md  memory_consumption_by_function.md  open_source_dependencies.md  portability.md
include/certifier/: certifier.h  certifier_api_easy.h  property.h  types.h  xpki_client.h
internal_headers/certifier/: base58.h  base64.h  certifier.h  certifier_api_easy_internal.h  certifier_internal.h  certifierclient.h  code_utils.h  error.h  http.h  httpdebug.h  log.h  parson.h  property_internal.h  sectigo_client.h  security.h  system.h  timer.h  types.h  util.h  xpki_client_internal.h
matter_plugin/: BUILD.gn  CertifierCredentialIssuerCommands.h  CertifierDACProvider.cpp  CertifierDACProvider.h  CertifierOperationalCredentialsIssuer.cpp  CertifierOperationalCredentialsIssuer.h  args.gni  generate_dac_chain.py  libcertifier.cfg  main.cpp
matter_plugin/build_overrides/: build.gni  certifier.gni  chip.gni  editline.gni  jsoncpp.gni  nlassert.gni  nlfaultinjection.gni  nlio.gni  nlunit_test.gni  openthread.gni  ot_br_posix.gni  pigweed.gni
matter_plugin/certification-declaration-gen/: .gitignore  Makefile  MatterTLV.py  README.md  certification_declaration_test_vector.py  certifier_cd_gen.py  crypto_primitives.py  test_keys_constants.py
matter_plugin/certifier-all-clusters-app/: .gitignore  BUILD.gn  CertifierOptions.cpp  CertifierOptions.h  LightingManager.cpp  args.gni  main.cpp  trafficlight
matter_plugin/certifier-tool/: BUILD.gn  CertifierCredentialIssuerCommands.h  CertifierOperationalCredentialsIssuer.cpp  CertifierOperationalCredentialsIssuer.h  main.cpp
matter_plugin/common/: .gitignore  CertifierDACProvider.cpp  CertifierDACProvider.h
resources/: class3.p12  device-attestation-certificate.p12  seed.p12
src/: base58.c  base64.c  certifier.c  certifier_api_easy.c  certifierclient.c  error.c  http.c  httpdebug.c  log.c  main.c  mbedtls.c  openssl.c  parson.c  property.c  sectigo_client.c  security.c  system.c  timer.c  util.c  xpki_client.c
tests/: easy_api_tests.c  easy_api_tests.h  tests.c  tests.h
tests/Unity/include/: unity.h  unity_internals.h
tests/Unity/src/: unity.c
tests/functional/: test-app-reg.sh  test-create-crt.sh  test-create-node-address.sh  test-create-x509-crt.sh  test-device-reg.sh  test-fetch-cert-e2e.sh  test-fetch-cert.sh
tests/keymgr/: CMakeLists.txt  main.c
tests/xc_apis/: xc_api_tests.c
